--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
 
         <activity
-            android:name=".ui.registration.RegistrationActivity"
+            android:name=".ui.voting.VotingActivity"
             android:exported="true">
         </activity>
     </application>
