--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,16 +21,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.registration.RegistrationActivity"
-            android:exported="true">
-        </activity>
-
+            android:exported="false"></activity>
         <activity
             android:name=".ui.voting.VotingActivity"
-            android:exported="true">
-        </activity>
+            android:exported="false"></activity>
+        <activity
+            android:name=".ui.code.CodeDisplay"
+            android:exported="false" />
     </application>
 
 </manifest>
