--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.PesquisaDeOpinião"
         tools:targetApi="31">
         <activity
+            android:name=".ui.codeChecker.CodeCheckerActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -23,12 +26,12 @@
         </activity>
         <activity
             android:name=".ui.registration.RegistrationActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".ui.voting.VotingActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
-            android:name=".ui.code.CodeDisplay"
+            android:name=".ui.codeDisplay.CodeDisplay"
             android:exported="false" />
     </application>
 
